z-index header fixed

--- a/src/containers/NewHeader/NHeader.css
+++ b/src/containers/NewHeader/NHeader.css
@@ -12,6 +12,7 @@
     position: fixed;
     top: 0;
     margin-top: 20px;
+    z-index: 2000;
 }
 
 .nheader-column1{
